changes to training notebook

--- a/training/potato-disease-classification-model.ipynb
+++ b/training/potato-disease-classification-model.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Dataset credits: https://www.kaggle.com/arjuntejaswi/plant-village"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Import all the Dependencies"
    ]
   },
